# apywrapper

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: checks.yml  upload_pypi.yml
example/chatwork/: chatwork.py
src/: abc.py  apywrapper.py  path.py  request.py
src/apywrapper/: __init__.py  _abc.py  _api.py  _path.py  _request.py  _types.py  _utils.py  api.py  request.py
src/command/: application.py
tests/: test_apywrapper.py  test_path.py  test_request.py  test_utils.py
typings/dacite/: __init__.pyi  config.pyi  core.pyi  data.pyi  dataclasses.pyi  exceptions.pyi  types.pyi
typings/httpx/: __init__.pyi  __version__.pyi  _api.pyi  _auth.pyi  _client.pyi  _config.pyi  _content_streams.pyi  _decoders.pyi  _exceptions.pyi  _models.pyi  _status_codes.pyi  _types.pyi  _utils.pyi
typings/httpx/_transports/: asgi.pyi  urllib3.pyi  wsgi.pyi
