[tool.poetry]
name = "apywrapper"
version = "0.1.5"
description = "make wrapper for RESTful API"
license = "GPL-3.0-or-later"
authors = ["sh1ma <in9lude@gmail.com>"]
packages = [
    { include = "apywrapper", from = "src" },
]
readme = "README.md"
homepage = "https://github.com/sh1ma/apywrapper"
repository = "https://github.com/sh1ma/apywrapper"
keywords = ["web", "restful", "api", "wrapper", "apywrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment"
]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.1"
dacite = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"